<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context="com.example.d1mys1klapo4ka.bincalc.MainActivity">

    <EditText
        android:id="@+id/et_put_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_orange_light"
        android:ems="10"
        android:cursorVisible="false"
        android:clickable="true"
        android:inputType="number"
        android:textSize="24sp"
        android:onClick="onClick"
        android:hint="@string/et_hint"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/et_inference_text"
        android:hint="@string/et_hint"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:cursorVisible="false"
        android:clickable="true"
        android:onClick="onClick"
        android:background="@android:color/holo_orange_light"
        android:ems="10"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_put_text"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_width="0dp"

        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/et_inference_text"
        app:layout_constraintRight_toRightOf="@+id/et_inference_text"
        app:layout_constraintTop_toBottomOf="@+id/et_inference_text"
        app:layout_constraintVertical_bias="0.0"
        android:id="@+id/linearLayout5"
        app:layout_constraintHorizontal_bias="0.0">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_inference_text">

            <Button
                android:id="@+id/bt_clear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/clear"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_inference_text"
                tools:ignore="ButtonStyle,NestedWeights"
                android:onClick="onClick"/>

            <Button
                android:id="@+id/bt_delete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_dark"
                android:textSize="24sp"
                android:text="@string/delete"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_inference_text"
                tools:ignore="ButtonStyle"
                android:onClick="onClick"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <Button
                android:id="@+id/bt_seven"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/seven"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="ButtonStyle,NestedWeights"
                android:contentDescription="@string/seven"/>

            <Button
                android:id="@+id/bt_eight"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/eight"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/bt_seven"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="ButtonStyle"
                android:contentDescription="@string/eight"/>

            <Button
                android:id="@+id/bt_nine"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/nine"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                tools:ignore="ButtonStyle"
                android:contentDescription="@string/nine"/>

            <Button
                android:id="@+id/bt_a"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_green_light"
                android:text="@string/a"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                tools:ignore="ButtonStyle"
                android:contentDescription="@string/a"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <Button
                android:id="@+id/bt_four"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/four"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                tools:ignore="ButtonStyle,NestedWeights"
                android:contentDescription="@string/four"/>

            <Button
                android:id="@+id/bt_fife"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/fife"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                tools:ignore="ButtonStyle"
                android:contentDescription="@string/fife"/>

            <Button
                android:id="@+id/bt_six"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/six"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                tools:ignore="ButtonStyle"
                android:contentDescription="@string/six"/>

            <Button
                android:id="@+id/bt_b"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_green_light"
                android:text="@string/b"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                tools:ignore="ButtonStyle"
                android:contentDescription="@string/b"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <Button
                android:id="@+id/bt_one"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/one"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                tools:ignore="ButtonStyle,NestedWeights"
                android:contentDescription="@string/one"/>

            <Button
                android:id="@+id/bt_twq"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/two"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                tools:ignore="ButtonStyle"
                android:contentDescription="@string/two"/>

            <Button
                android:id="@+id/bt_three"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/three"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                tools:ignore="ButtonStyle"
                android:contentDescription="@string/three"/>

            <Button
                android:id="@+id/bt_c"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_green_light"
                android:text="@string/c"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                tools:ignore="ButtonStyle"
                android:contentDescription="@string/c"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            app:layout_constraintVertical_bias="0.0">

            <Button
                android:id="@+id/bt_ziro"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/ziro"
                android:textSize="24sp"
                tools:ignore="ButtonStyle,NestedWeights"
                android:contentDescription="@string/ziro"/>

            <Button
                android:id="@+id/bt_f"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_green_light"
                android:text="@string/f"
                android:textSize="24sp"
                tools:ignore="ButtonStyle"
                android:contentDescription="@string/f"/>

            <Button
                android:id="@+id/bt_e"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_green_light"
                android:text="@string/e"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                tools:ignore="ButtonStyle"
                android:contentDescription="@string/e"/>

            <Button
                android:id="@+id/bt_d"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:background="@android:color/holo_green_light"
                android:text="@string/d"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                tools:ignore="ButtonStyle"
                android:contentDescription="@string/d"/>
        </LinearLayout>
    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="126dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="126dp" />

</android.support.constraint.ConstraintLayout>
